--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
-# Files and directories created by pub.
-.dart_tool/
-.packages
+# build output
+dist/
 
-# Conventional directory for build output.
-build/
+# generated types
+.astro/
 
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+# IDE
+.idea/
 .vscode/
